--- a/views/home.ejs
+++ b/views/home.ejs
@@ -75,7 +75,7 @@
 			</div>
 			<div class="col-md-4">
 			  <section class="login-form">
-				<form method="post" action="/login" role="login">
+				<form method="post" action="home/masjid/login" role="login">
 				  <img src="/../images/loginom.png" class="img-responsive" alt="" />
 				  <input type="email" name="email" placeholder="Masukkan E-Mail" required class="form-control input-lg" />
 				  <input type="password" name="password" class="form-control input-lg" id="password" placeholder="Masukkan Password" required="" />
@@ -98,9 +98,9 @@
 <div class="sidebar-update">
 
 </div>
-<div class="col-sm-4">
-
-</div>
+<button class="col-sm-4">	
+	<a href="/home/masjid/list-masjid"><h1 class="list-mjd">LIHAT MASJID SEKITAR</h1></a>
+</button>
 <div class="col-sm-3">
 	<img id="myImg" src="/../images/map1.png" alt="Trolltunga, Norway" style="width:240px ;height: 220px; margin-top: 11px; margin-left: 8px; margin-top: 15px">
 
