--- a/views/home.ejs
+++ b/views/home.ejs
@@ -99,7 +99,7 @@
 
 </div>
 <button class="col-sm-4">	
-	<a href="/home/masjid/list-masjid"><h1 class="list-mjd">LIHAT MASJID SEKITAR</h1></a>
+	<a href="/home/masjid/listmasjid"><h1 class="list-mjd">LIHAT MASJID SEKITAR</h1></a>
 </button>
 <div class="col-sm-3">
 	<img id="myImg" src="/../images/map1.png" alt="Trolltunga, Norway" style="width:240px ;height: 220px; margin-top: 11px; margin-left: 8px; margin-top: 15px">
